force-app/main/default/objects/Tag_Relationship__c/Tag_Relationship__c.object-meta.xml
<CustomObject>
    <label>Tag Relationship</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Tag Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tag Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>