force-app/main/default/objects/Tag_Relationship__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <formula>TEXT( Tag__r.Color__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color</label>
    <type>Text</type>
</CustomField>