force-app/main/default/objects/Tag_Relationship__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <label>Record</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>