force-app/main/default/objects/Tag_Relationship__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <label>Tag</label>
    <referenceTo>Tag__c</referenceTo>
    <relationshipLabel>Tag Relationships</relationshipLabel>
    <relationshipName>Tag_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>