force-app/main/default/objects/Tag_Relationship__c/fields/Tag_Badge__c.field-meta.xml
<CustomField>
    <fullName>Tag_Badge__c</fullName>
    <formula>IMAGE(&quot;https://img.shields.io/badge/&quot;&amp; Tag__r.Category__c &amp;&quot;-&quot;&amp; Tag__r.Name__c &amp;&quot;-&quot;&amp; TEXT(Tag__r.Color__c), &quot;Tag Badge&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tag Badge</label>
    <type>Text</type>
</CustomField>