force-app/main/default/objects/Tag_Relationship__c/fields/Tag_Name__c.field-meta.xml
<CustomField>
    <fullName>Tag_Name__c</fullName>
    <formula>Tag__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tag Name</label>
    <type>Text</type>
</CustomField>